# uvw_static_lib_client

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: BuildDefaults.cmake
cmake/functions/: FetchContentLibUV.cmake  FetchContentLibUVW.cmake
